force-app/main/default/objects/ZP_Company_Tax_Code_EIN__c/ZP_Company_Tax_Code_EIN__c.object-meta.xml
<CustomObject>
    <label>ZP Company Tax Code EIN</label>
    <nameField>
        <displayFormat>TCE-{0000000}</displayFormat>
        <label>ZP Company Tax Code EIN Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZP Company Tax Code EINs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>