force-app/main/default/objects/ZP_Company_Tax_Code_EIN__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Account Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>