force-app/main/default/objects/ZP_Company_Tax_Code_EIN__c/fields/Account_Number_Encrypt__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Encrypt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Number Encrypt</label>
    <length>150</length>
    <type>Text</type>
</CustomField>