force-app/main/default/objects/ZP_Company_Tax_Code_EIN__c/fields/FEIN__c.field-meta.xml
<CustomField>
    <fullName>FEIN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>FEIN</label>
    <length>150</length>
    <type>Text</type>
</CustomField>