force-app/main/default/objects/ZP_Company_Tax_Code_EIN__c/fields/FEIN_Encrypt__c.field-meta.xml
<CustomField>
    <fullName>FEIN_Encrypt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FEIN Encrypt</label>
    <length>150</length>
    <type>Text</type>
</CustomField>