force-app/main/default/objects/ZP_Company_Tax_Code_EIN__c/fields/Reference_Ein__c.field-meta.xml
<CustomField>
    <fullName>Reference_Ein__c</fullName>
    <label>Reference_Ein</label>
    <length>150</length>
    <type>Text</type>
</CustomField>