force-app/main/default/objects/ZP_Company_Tax_Code_EIN__c/fields/Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Code</label>
    <length>150</length>
    <type>Text</type>
</CustomField>