force-app/main/default/objects/ZP_Company_Tax_Code_EIN__c/fields/ZP_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>ZP_Company_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ZP Company ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>